src/objects/Study_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Item</label>
        <referenceTo>Checklist_Item__c</referenceTo>
        <relationshipLabel>Study Attribute</relationshipLabel>
        <relationshipName>Checklist_Driver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Attribute__c</fullName>
        <inlineHelpText>In case of a boolean value, Enter value in lower case (&quot;true&quot; or &quot;false&quot;).For Countries, Spell it correct and comma separate for multiple countries.</inlineHelpText>
        <label>Study Attribute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Field_Label__c</fullName>
        <inlineHelpText>Study Field Labels are Case Sensitive.For country write &quot;Countries the Study is being conducted in&quot;</inlineHelpText>
        <label>Study Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Field__c</fullName>
        <label>Study Field API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Study Attribute</label>
    <nameField>
        <displayFormat>DR-{000}</displayFormat>
        <label>Driver ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study_Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>